2008-10-08  John W. Eaton  <jwe@octave.org>

	* Sparse-op-defs.h (SPARSE_SMSM_BOOL_OPS): Duplicate code for scalar
	sparse arguments rather than rely on extern function.

2008-10-08  Jaroslav Hajek  <highegg@gmail.com>

	* oct-inttypes.h (octave_base_int<T>::compute_threshold): Return
	exclusive bounds rather than inclusive, be resistant to compiler
	optimizations.
	(octave_base_int<T>::convert_real): Use exclusive bounds.

2008-10-07  Jaroslav Hajek <highegg@gmail.com>

	* oct-inttypes.h (OCTAVE_INT_DOUBLE_BIN_OP): Change octave_int64 to 
	octave_uint64 where appropriate.

2008-10-06  David Bateman  <dbateman@free.fr>
	
	* Sparse-op-defs.h (SPARSE_SMSM_CMP_OPS): Duplicate code for scalar
	sparse arguments rather than rely on extern function.

2008-10-06  John W. Eaton  <jwe@octave.org>

	* Spasre-op-defs.h: Undo previous change.

2008-10-01  Jaroslav Hajek <highegg@gmail.com>

	* oct-inttypes.h (octave_int<T>::one, octave_int<T>::zero): Declare
	constants. 
	* oct-inttypes.cc: Define them.
	* oct-inttypes.h: Define mixed operations via long double if possible.
	* oct-inttypes.cc: Define alternative implementations for 64-bit
	multiplication and mixed operations. 
	* mx-ops: Instantiate all 64-bit integer operations.

2008-10-06  Jaroslav Hajek  <highegg@gmail.com>

	* oct-lookup.h: Mark functions inline. Add missing std:: qualifiers.

2008-10-06  John W. Eaton  <jwe@octave.org>

	* Sparse.h (Sparse<T>::elt_type): New typedef.
	* Sparse-op-defs.h (SPARSE_SMSM_BOOL_OP, SPARSE_MSM_CMP_OP):
	Use it to call sparse-matrix/scalar operator instead of attempting
	to instantiate mixed-type sparse-matrix/scalar operators.

2008-10-03  Jaroslav Hajek  <highegg@gmail.com>

	* Array.h (Array<T>::maybe_delete_elements): Remove rfv argument from
	declaration.
	* Array.cc (Array<T>::maybe_delete_elements): Remove all usages of
	rfv.

2008-10-03  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (assignN): Do not call maybe_delete_elements when
	for empty matrix.
